--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,24 @@
 div {
   text-align: center;
 }
-html, body { height: 100%; margin: 0; padding: 0; color: silver; background-color: dimgray;}
-#map {
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  color: silver;
+  background-color: dimgray;
+}
+
+.map {
   height: 54%;
   box-shadow: 3px 6px 9px darkgrey;
-  }
+}
+
 a {
   font-size: 66%;
 }
+
 a:link {
     text-decoration: none;
     color: lightblue;
@@ -28,18 +38,22 @@ a:active {
     text-decoration: underline;
     color: white;
 }
+
 p {
   font-size: 18px;
   margin: 0;
   color: silver;
 }
+
 .title-item {
   text-transform: uppercase;
 }
+
 .search {
   margin: 3% 27% 3% 27%;
   padding: 0 0 0 9%;
 }
+
 .list-item {
   text-align: center;
   border: 3px solid darkgrey;
@@ -47,6 +61,7 @@ p {
   padding: 1% 0 1% 0;
   background-color: #222;
 }
+
 .list-view {
   height: 33%;
 }
